Fixed supermodal Z-indexs

--- a/client/src/components/Popup Components/TestPopup/SuperModal.scss
+++ b/client/src/components/Popup Components/TestPopup/SuperModal.scss
@@ -2,6 +2,7 @@
     position: absolute;
     top: 0;
     left: 0;
+    z-index: 101;
     max-width: 100vw;
     width: 100%;
     height: 100%;
@@ -17,6 +18,7 @@
         
     }
     img.ModalChild{
+        z-index: 100;
         animation: infinite 100s spin linear;
         @keyframes spin {
             from{transform: rotate(0deg);}
